<resources>
    <string name="app_name">Record Store</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="add_artist">Add Artist</string>
    <string name="add_album">Add Album</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
</resources>
