<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sandy.recordstore.activities.artists.ViewArtistActivity">

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="286dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="80dp"
        android:onClick="onEditButtonClick"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:onClick="onDeleteButtonClick"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="64dp"
        android:onClick="onBackButtonClick"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintStart_toEndOf="@+id/button_edit"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        app:layout_constraintVertical_bias="0.125" />

    <ListView
        android:id="@+id/albums_list"
        android:layout_width="416dp"
        android:layout_height="458dp"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
